# QANTUM-FRAMEWORK-PRIVATE

./: .env.deployment  .env.example  .env.production  .gitignore  ANALYZE_GOD_MODULES.ps1  ANALYZE_SAAS_MODULES.ps1  ARCHITECTURE.md  ARCHITECTURE_FULLSTACK.md  BUILD_AND_DEPLOYMENT.md  CHANGELOG.md  CHANGELOG_QANTUM_CLIENT.md  CLEANUP_VORTEX_LINKS.ps1  COMMIT_PUSH_STATUS.md  COMPETITIVE_SUPERIORITY_ANALYSIS.md  COUNT_QA_SAAS_CODE.ps1  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_UNIFIED.md  DEPLOY_ALL_REPOS.ps1  DEPLOY_QUICK.md  Dockerfile  ENTERPRISE_READY.txt  FINAL_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FIND_ALL_VORTEX.ps1  FIND_VORTEX_FILES.ps1  FIX_LINKS.ps1  FIX_MD_LINKS.ps1  FIX_URLS.ps1  GEMS_REPORT.md  GETTING_STARTED.md  GOD_LEVEL_SAAS_AUTO_INTEGRATOR.ps1  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_QANTUM.md  INTEGRATION_USAGE.md  ISOLATE_ALL_GIANTS.cjs  JULESBRIDGE_README.md  (+63 more)
.Jules/: palette.md
.apoptosis/: state.json
.github/: copilot-instructions.md
Backend/: Dockerfile  Ledger.py  NexusLogic.py  OmniCore.py  OmniCore_Scribe.py  PaymentGateway.py  README.md  core_engine.py  core_engine1.py  dashboard.html  extract_top_functions.py  helios_arbitrage_engine.py  requirements.txt  sovereign.ledger  stripe_webhook_handler.py  test_ledger.py  test_payment_gateway.py  verify_setup.py
Backend/rust_core/: Cargo.toml
Backend/rust_core/src/: lib.rs  server.rs
Backend/rust_core/src/economy/: mod.rs
Backend/rust_core/src/intelligence/: akashic_link.rs
Backend/rust_core/src/scribe/: verifier.rs
Backend/rust_core/src/telemetry/: mod.rs
CONFIG/: .env.example  .env.fortress.example  .env.local  .package-lock.json  CONTEXT-FRAME.json  MEGA_AUDIT_REPORT.json  alpha-squad-manifest.json  analysis.json  architecture-report-v2.json  architecture-report.json  beta-squad-manifest.json  config  eslint.config.mjs  gamma-squad-manifest.json  healing-history.json  jest.config.json  jest.setup.js  magnet-registry.json  manifest.json  meditation-result.json  mega-map.json  package-lock.json  package.json
Dashboard_Final/: index.html  verify.html
FOUND_GEMS/: vortex-outreach-1768037219481_Tesla_Autopilot.txt  vortex-outreach-1768037249557_SpaceX_Starlink.txt  vortex-sales-1768037074899_Startup_620.txt  vortex-sales-1768037090035_Startup_472.txt  vortex-sales-1768037105091_Startup_194.txt
Frontend/: .env  .gitattributes  Dockerfile  Dockerfile.dev  benchmark_whisper.ts  build_output.txt  fix_strings.py  index.html  index.legacy.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  verify_ui.py  vite.config.ts
Frontend/src/rust_mojo_economy/: Cargo.toml  errors.txt
Frontend/src/rust_mojo_economy/src/: gateway.rs  main.rs
JOB_APPLICATION_ASSETS/: COVER_LETTER_AMUSNET.md  COVER_LETTER_BINANCE_US.md  COVER_LETTER_COMPUTRITION_AI.md  COVER_LETTER_JOBGETHER.md  COVER_LETTER_MOBILE_WAVE.md  COVER_LETTER_PATRIANNA.html  COVER_LETTER_PATRIANNA_JAVA_MID.html  COVER_LETTER_PATRIANNA_QA.html  COVER_LETTER_ROLLER_GAMING.md  COVER_LETTER_UNIVERSAL.md  LINKEDIN_CONTENT.html  RESUME_CRYPTO_ARCHITECT.html  RESUME_PATRIANNA_JAVA.html  RESUME_PATRIANNA_JAVA_MID.html  RESUME_PATRIANNA_QA.html  RESUME_SYNACK_RED_TEAM.html  RESUME_VORTEX_PREMIUM.html
JOB_PORTFOLIOS/: 01_VORTEX_AI.md  03_VERITAS_DASHBOARD.md  08_BIO_HEALER.md  09_TELEGRAM_UPLINK.md  10_ARCHITECT_LEDGER.md  11_Q_ALLRIGHT.md  12_QANTUM_NEXUS.md  13_API_SENSEI.md
LogicSubstrate/: SingularityLogic.ts  index.ts
NerveCenterServer/: index.ts  package-lock.json
QANTUM_CONFIG_HUB/: SOVEREIGNTY_DECLARED.md  config.ts  nexus-registry.json  server-reference-manifest.json
QANTUM_DEBUGGER/: ISOLATION_COMPLETE.md  package.json
QANTUM_DEMO/: README.md  SOVEREIGNTY_DECLARED.md  index.html  package-lock.json  package.json
QANTUM_FRAMEWORK/: DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  SHADOW_REPO_STRATEGY.md  SOVEREIGNTY_DECLARED.md  docker-compose.yml  (+1 more)
src/rust_mojo_core/: Cargo.toml
src/rust_mojo_core/src/: lib.rs
src/rust_mojo_economy/: Cargo.toml
src/rust_mojo_economy/src/: lib.rs  main.rs
src/rust_mojo_telemetry/: Cargo.toml
src/rust_mojo_telemetry/src/: lib.rs  main.rs
(+834 files in other folders)
