# QANTUM FRAMEWORK - MEGA-HYBRID Rust Workspace
# Enterprise-Grade Multi-Module Rust Architecture
# Combines LwaS (Language with a Soul), Quantum Economy, and Telemetry Systems

[workspace]
resolver = "2"

members = [
    "Backend/rust_core",
    "Backend/telemetry",
    "veritas_core",
    "src/rust_mojo_core",
    "src/rust_mojo_economy",
    "src/rust_mojo_telemetry",
]

# Workspace-wide dependencies for consistency across all modules
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.5"
actix-rt = "2.9"
sha2 = "0.10"
sysinfo = "0.33"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# Workspace-wide build settings for optimization
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Enterprise deployment profile
[profile.production]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
