[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lwas_economy_backend"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
