# LwaS Core - Language with a Soul Compiler Core
# Transforms philosophical axioms into binary code

[package]
name = "lwas_core"
version = "1.0.0"
edition = "2021"
authors = ["QAntum Fortress Team"]
description = "Core compiler engine for LwaS (Language with a Soul) - Philosophical axioms to binary transformation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
