# LwaS Economy - Quantum Economic Engine
# Real-time Equity and Profitability calculation

[package]
name = "lwas_economy"
version = "1.0.0"
edition = "2021"
authors = ["QAntum Fortress Team"]
description = "Quantum economy module for real-time Equity and Profitability calculations in LwaS ecosystem"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "economy_server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
