[package]
name = "aeterna_unified"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
rand = "0.8"
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
